# speex

./: .gitignore  CMakeLists.txt  README  conanfile.py
cmake/: speexConfig.cmake.in
include/speex/: speex_types.h
libspeex/: CMakeLists.txt
