set(SPEEX_LIB_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

file(GLOB_RECURSE SPEEX_LIB_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE SPEEX_LIB_LIBRARY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")

add_library(speex STATIC
	${SPEEX_CONFIG}
	${SPEEX_LIB_HEADER_FILES}
	${SPEEX_LIB_LIBRARY_FILES})

target_link_libraries(speex PUBLIC ${CONAN_LIBS})
target_include_directories(speex PUBLIC ${PROJECT_SOURCE_DIR} ${SPEEX_HEADER_DIR})
